Scope application candidates to lean-only per user decision
Mark Closure Compiler as the lone clean lean-app fit; demote ANTLR tool
(icu4j not lean). Record lean-bar rejections (CFR/Procyon zero-dep,
google-java-format low diversity, JGit OSGi/network, Spoon/Soot too heavy)
and note the lean-vs-mergeable-dep-tree tension.